[gd_scene load_steps=6 format=3 uid="uid://bagb4oxjuitug"]

[ext_resource type="Script" path="res://gui/highscore/fastest_time/fastest_time_modal.gd" id="1_ro4em"]
[ext_resource type="Texture2D" uid="uid://by6si6laf3vhr" path="res://gui/highscore/fastest_time/fastest_time.png" id="1_xbfpl"]
[ext_resource type="Texture2D" uid="uid://boekrwi71xsvu" path="res://gui/highscore/fastest_time/ok/fastest_ok.png" id="2_vdkuy"]
[ext_resource type="Texture2D" uid="uid://catefplp7duo7" path="res://gui/highscore/fastest_time/ok/fastest_ok_pressed.png" id="3_owa2v"]
[ext_resource type="Texture2D" uid="uid://vdxp2qhunw18" path="res://gui/highscore/fastest_time/ok/fastest_ok_highlight.png" id="4_uc4ie"]

[node name="fastest_time_modal" type="Control"]
layout_mode = 3
anchor_right = 0.305
anchor_bottom = 0.33
offset_right = -0.160004
offset_bottom = 0.0399933
script = ExtResource("1_ro4em")

[node name="WhyDoIKeepDoingThisDirtyHack" type="Control" parent="."]
anchors_preset = 0
offset_left = -2048.0
offset_top = -2048.0
offset_right = 2048.0
offset_bottom = 2048.0

[node name="ModalBody" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 93.0
offset_bottom = 92.0
texture = ExtResource("1_xbfpl")

[node name="OK" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 118.0
offset_right = 105.0
offset_bottom = 144.0
focus_neighbor_top = NodePath("../NameInput")
focus_next = NodePath("../NameInput")
focus_previous = NodePath("../NameInput")
texture_normal = ExtResource("2_vdkuy")
texture_pressed = ExtResource("3_owa2v")
texture_focused = ExtResource("4_uc4ie")

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 88.0
offset_right = 136.0
offset_bottom = 104.0
focus_neighbor_bottom = NodePath("../OK")
focus_next = NodePath("../OK")
focus_previous = NodePath("../OK")
text = "Anonymous"
max_length = 32
caret_blink = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="gui_input" from="WhyDoIKeepDoingThisDirtyHack" to="." method="_on_why_do_i_keep_doing_this_dirty_hack_gui_input"]
[connection signal="pressed" from="OK" to="." method="_on_ok_pressed"]
